Se sube la resolucion completa de los ejercicios JavaScript de W3School

--- a/Pagina1.html
+++ b/Pagina1.html
@@ -24,14 +24,14 @@
             cursor: pointer;
         }
         .boton-tamaño {
-            background-color: #4CAF50; /* Verde */
+            background-color: #4CAF50;
             color: white;
         }
         .boton-tamaño:hover {
             background-color: #45a049;
         }
         .boton-color {
-            background-color: #008CBA; /* Azul */
+            background-color: #008CBA;
             color: white;
         }
         .boton-color:hover {
